# yew-oauth2

./: .gitignore  .versionrc  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
develop/: docker-compose.yaml
src/: agent.rs  config.rs  context.rs  hook.rs  lib.rs  prelude.rs
src/agent/: config.rs  error.rs  mod.rs  ops.rs  state.rs  support.rs
src/agent/client/: mod.rs  oauth2.rs  openid.rs
src/components/: auth.rs  authenticated.rs  context.rs  failure.rs  mod.rs  noauth.rs  oauth2.rs  use_authentication.rs
src/components/context/: agent.rs  mod.rs
src/components/redirect/: location.rs  mod.rs  router.rs
src/context/: mod.rs  utils.rs
yew-oauth2-example/: Cargo.toml  index.html
yew-oauth2-example/assets/: style.scss
yew-oauth2-example/src/: app.rs  main.rs
yew-oauth2-example/src/components/: component.rs  expiration.rs  functional.rs  identity.rs  mod.rs  use_auth.rs  use_latest_token.rs  view.rs
yew-oauth2-redirect-example/: Cargo.toml
yew-oauth2-redirect-example/src/: app.rs
yew-oauth2-redirect-example/src/components/: debug.rs  expiration.rs  mod.rs  use_auth.rs
