[package]
name = "yew-oauth2"
version = "0.5.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "OAuth2  components for Yew"
repository = "https://github.com/ctron/yew-oauth2"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "oauth2", "web", "html"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
gloo-storage = "0.2"
gloo-timers = "0.2"
gloo-utils = "0.1"
js-sys = "0.3"
log = "0.4"
num-traits = "0.2"
oauth2 = "4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.20"

web-sys = { version = "0.3", features = [
    "Window",
] }

openidconnect = { version = "2", optional = true }
yew-nested-router = { version = "0.0.2", optional = true }

[features]
router = ["yew-nested-router"]
openid = ["openidconnect"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
