[package]
name = "yew-oauth2"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "OAuth2 components for Yew"
repository = "https://github.com/ctron/yew-oauth2"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "oauth2", "oidc", "web", "html"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
async-trait = "0.1"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
js-sys = "0.3"
log = "0.4"
num-traits = "0.2"
oauth2 = "4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
tokio = { version = "1", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.21.0"

web-sys = { version = "0.3", features = [
    "Window",
] }

openidconnect = { version = "3.0", optional = true }
yew-nested-router = { version = "0.7.0", optional = true }

[features]
# Enable for OpenID Connect support
openid = ["openidconnect"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
