[package]
name = "yew-oauth2-example"
version = "0.1.0"
edition = "2021"

[dependencies]
yew-oauth2 = { path = ".." }

chrono = { version = "0.4", features = ["wasmbind"] }
gloo-timers = "0.2"
humantime = "2"
log = { version = "0.4", features = [] }
serde_json = "1"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-nested-router = { git = "https://github.com/mh84/yew-nested-router", rev = "de83197b27eef473afcf8a77776cd3bd245e2d56" }

openidconnect = { version = "3.0", optional = true }

[features]
default = ["openid"]
openid = ["openidconnect", "yew-oauth2/openid"]

[patch.crates-io]
#openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", rev = "64be3c7636bc6f745a9b33f0702950bbacca318c" }
