[package]
name = "yew-oauth2-example"
version = "0.1.0"
edition = "2021"

[dependencies]
yew-oauth2 = { path = ".." }

gloo-timers = "0.3"
humantime = "2"
log = { version = "0.4", features = [] }
serde_json = "1"
time = "0.3"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-nested-router = "0.5"

openidconnect = { version = "3.0", optional = true }

[features]
default = ["openid"]
openid = ["openidconnect", "yew-oauth2/openid"]

[patch.crates-io]
#openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", rev = "64be3c7636bc6f745a9b33f0702950bbacca318c" }
