[package]
name = "yew-oauth2-redirect-example"
version = "0.1.0"
edition = "2021"

[dependencies]
yew-oauth2 = { path = "..", features = ["yew-nested-router"] }
chrono = { version = "0.4", features = ["wasmbind"] }
gloo-timers = "0.2"
humantime = "2"
log = { version = "0.4", features = [] }
serde_json = "1"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
yew-nested-router = { git = "https://github.com/mh84/yew-nested-router", rev = "de83197b27eef473afcf8a77776cd3bd245e2d56" }

openidconnect = { version = "3.0", optional = true }

[features]
default = ["openid"]
openid = ["openidconnect", "yew-oauth2/openid"]

[patch.crates-io]
#openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" }
