[package]
name = "yew-oauth2-redirect-example"
version = "0.1.0"
edition = "2021"

[dependencies]
yew-oauth2 = { path = "..", features = ["yew-nested-router"] }
gloo-timers = "0.3"
humantime = "2"
log = { version = "0.4", features = [] }
serde_json = "1"
time = "0.3"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
yew-nested-router = "0.6.1"

openidconnect = { version = "3.0", optional = true }

[features]
default = ["openid"]
openid = ["openidconnect", "yew-oauth2/openid"]

[patch.crates-io]
#openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" }
